# suitability-desktop

./: .gitignore  README.md  SETUP_GUIDE.md  clients.csv  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
.github/: release.yaml
.github/workflows/: release.yaml
app/: globals.css  layout.tsx  page.tsx
app/_api_backup/clients/: route.ts
app/_api_backup/clients/[id]/: route.ts
app/clients/: client-options-menu.tsx  clientData.ts  data.ts  page.tsx
app/documents/: actions.ts  document-list.tsx  page.tsx
app/settings/: page.tsx
app/suitability/: error.tsx  loading.tsx  page.tsx
components/: app-shell.tsx  app-sidebar.tsx  calculator.tsx  client-selector.tsx  content-container.tsx  csv-handling.tsx  login-form.tsx  route-title.tsx  search-bar.tsx  theme-toggle.tsx  top-bar.tsx
components/clients/: client-details-sheet.tsx
components/suitability/: LetterPreviewSheet.tsx  SuitabilityLetterPDF.tsx  SuitabilityWorkspace.tsx
components/ui/: card.tsx
hooks/: use-tauri.ts
lib/: data-provider.ts  database.ts  file-utils.ts  fontsPDF.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
